Learn more overlap issue fixed

--- a/front-end/Assets/src/css/pages/_boxy-header.scss
+++ b/front-end/Assets/src/css/pages/_boxy-header.scss
@@ -50,7 +50,7 @@
             position: relative;
             padding-bottom: 3px;
             margin-top: 10px;    
-            z-index: 105;    
+            z-index: 18;    
             &::before {
                 content: "";
                 position: absolute;
@@ -623,6 +623,12 @@
                         @media (max-width: 831px) {
                             width: 50%;
                         }
+                        @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+                            @media (min-width: $break-md) {                            
+                                width: 100%;
+                            } 
+                         }
+                       
                         @media (min-height: 880px) {
                             height: 60%;
                         }  
@@ -648,6 +654,11 @@
                         @media (min-width: $break-sm) {
                             margin: 0 auto 0 0;
                         }
+                        @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+                            @media (min-width: $break-md) {                            
+                                width: calc(100% - 40px);
+                            } 
+                         }
                         @media (min-width: $break-lg) {
                             padding: 0 0 40px 40px;
                             max-width: 70%;
